@@ -8,6 +8,8 @@ version = '1.0-SNAPSHOT'
 
 
 
+
+
 repositories {
     mavenCentral()
 }
@@ -26,16 +28,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'org.slf4j:slf4j-simple:2.0.11'
-    
-    compileOnly 'org.projectlombok:lombok:1.18.36'
-    annotationProcessor 'org.projectlombok:lombok:1.18.36'
-    testCompileOnly 'org.projectlombok:lombok:1.18.36'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
 test {
     testLogging.showStandardStreams = true
     systemProperties System.getProperties()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 gradle.startParameter.continueOnFailure = true
